--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Other activities -->
         <activity
             android:name=".SignInActivity"
             android:exported="true">
@@ -29,6 +31,15 @@
             android:name=".SignUpActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".MonitorActivity"
+            android:exported="true">
+        </activity>
+
     </application>
 
 </manifest>
